--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-openid-connect": "^1.0.1",
+    "mongodb": "^3.5.7",
     "mongoose": "^5.9.11"
   }
 }
